grammar.js
    program: $ => seq(
      repeat($.prql),
      repeat(
        choice(
          $.pipeline,
          $.function_definition,
          $.variable,
          // $.module_definition,
        ),
      ),
    ),

    keyword_from: _ => make_keyword("from"),
    keyword_filter: _ => make_keyword("filter"),
    keyword_derive: _ => make_keyword("derive"),
    keyword_select: _ => make_keyword("select"),
    keyword_in: _ => make_keyword("in"),
    keyword_let: _ => make_keyword("let"),
    pipeline: $ => seq(
      choice(
        $.from,
        $.from_text,
      ),
      optional($.transforms),
    ),

    function_definition: $ => seq(
      $.keyword_let,
      field("name", $.identifier),
      repeat1($.parameter),
      "->",
      field("logic", choice($.binary_expression, $.s_string)),
    ),

    parameter: $ => choice(
      $.identifier,
      seq($.identifier, ":", field("default", $.literal)),
    ),

    _call_parameter: $ => choice(
      seq($.identifier, ":", field("value", $.literal)),
      field("value", $.literal),
      field("value", $.identifier),
    ),

    function_call: $ => prec(1, 
      seq(
        field("name", $.identifier),
        repeat1(alias($._call_parameter, $.parameter)),
      ),
    ),

    // module_definition: $ => seq(
    //   $.keyword_module,
    //   $.identifier,
    //   '{',
    //   repeat1(
    //     choice(
    //       $.variable,
    //       $.pipeline,
    //       $.module_definition,
    //       $.function_definition,
    //     )
    //   ),
    //   '}',
    // ),

    transforms: $ => repeat1(
      choice(
        $.derives,
        $.sorts,
        $.takes,
        $.joins,
        $.filter,
        $.select,
        $.aggregate,
        $.group,
        $.append,
        $.loop,
      ),
    ),

    from: $ => seq(
      $.keyword_from,
      $._table_selection,
    ),

    _table_selection: $ => choice(
      $._table_reference,
      seq(
        field("alias", $.identifier),
        "=",
        $._table_reference,
      ),
    ),

    derives: $ => seq(
      $.keyword_derive,
      choice(
        $.term,
        $.assignment,
        $._tuples,
      )
    ),

    _tuples: $ => seq(
      tuple_list(
        choice(
          $.term,
          seq('(', $.binary_expression, ')'),
        ),
        false
      ),
    ),

    filter: $ => seq(
      $.keyword_filter,
      $._boolean_expression,
      // TODO: (age | in 25..40)
    ),

    _boolean_expression: $ => seq(
      choice(
        parens(field("predicate", $._expression)),
        field("predicate", $._expression),
      ),
    ),

    select: $ => seq(
      $.keyword_select,
      choice(
        tuple_list($.term, false),
        seq($.bang, tuple_list($.term, false)),
        $.term,
      ),
    ),

    term: $ => prec(1,
      choice(
        field("value", $._expression),
        field("value", $.assignment),
      ),
    ),

    _expression: $ => prec(2,prec.left(
      choice(
        $.field,
        $.f_string,
        $.s_string,
        $.date,
        $.time,
        $.timestamp,
        $.binary_expression,
        $.unary_expression,
        parens($._expression),
        $.literal,
      ),
    )),

    unary_expression: $ => choice(
      prec('unary', seq('!', $._expression)),
    ),

    literal: $ => prec(2,
      choice(
        $.hexadecimal,
        $.octal,
        $.binary,
        $.scientific_number,
        $.decimal_number,
        $.integer,
        $.literal_string,
        $.keyword_true,
        $.keyword_false,
        $.keyword_null,
      ),
    ),

    _double_quote_string: _ => seq('"', /[^"]*/, '"'),
    _single_quote_string: _ => seq("'", /[^']*/, "'"),

    literal_string: $ => prec(1,
      choice(
        $._single_quote_string,
        $._double_quote_string,
      ),
    ),

    _friendly_number: $ => repeat1(choice($._natural_number, '_')),
    
    // Hexadecimal literals (0x80, 0xFF, etc.)
    hexadecimal: _ => token(seq(
      '0x',
      /[0-9a-fA-F]+/
    )),
    
    // Octal literals (0o777, 0o644, etc.)
    octal: _ => token(seq(
      '0o',
      /[0-7]+/
    )),
    
    // Binary literals (0b0011, 0b1010, etc.)
    binary: _ => token(seq(
      '0b',
      /[01]+/
    )),
    
    integer: $ => prec.left(seq(optional("-"), $._friendly_number)),
    
    scientific_number: $ => token(seq(
      optional('-'),
      choice(
        // Integer part with exponent: 5e9
        seq(/\d+/, /[eE]/, optional(/[+-]/), /\d+/),
        // Decimal part with exponent: 1.23e-4
        seq(/\d+/, '.', /\d+/, /[eE]/, optional(/[+-]/), /\d+/),
        // Decimal starting with dot: .5e2
        seq('.', /\d+/, /[eE]/, optional(/[+-]/), /\d+/),
      )
    )),

    field: $ => prec(2,
      seq(
        optional(
          seq(
            field('table', $._alias_identifier),
            '.',
          ),
        ),
        field('name', $.identifier),
      ),
    ),

    _alias_identifier : $ => choice(
      $.identifier,
      alias($._double_quote_string, $.identifier),
    ),


    identifier: $ => choice(
      $._identifier,
      seq('`', $._identifier_dot, '`'),
    ),
    _identifier: _ => /([a-zA-Z_][0-9a-zA-Z_]*)/,
    _identifier_dot: _ => /([a-zA-Z_.][0-9a-zA-Z_.]*)/,

    range:$ => choice (...[
      ['..', 'range'],
    ].map(([operator, range_prec]) =>
        prec.left(range_prec, choice(
          seq(
            field('from', $.integer),
            field('operator', operator),
            field('till', $.integer),
          ),
          seq(
            field('from', $.date),
            field('operator', operator),
            field('till', $.date),
          ),
        ))
      ),
    ),

    _agg_rhs_assignment: $ => prec(1,field(
      'operation', 
      seq(
        optional(
          $._agg_keywords,
        ),
        $._expression),
    ),
    ),

    assignment: $ => choice(... [
      ['=', 'alias_assignment'],
    ].map(([operator, range_prec]) =>
        prec.left(range_prec, choice(
          seq(
            field('alias', $._expression),
            field('operator', operator),
            choice(
              $._agg_rhs_assignment,
              parens($._agg_rhs_assignment),
              field('operator', $.function_call),
              parens(field('operator', $.function_call)),
              field('operator', $.case),
            ),
          ),
        ),
        ))),

    binary_expression: $ => choice(
      // Power operator - right associative
      prec.right('binary_pow', seq(
        field('left', $._expression),
        field('operator', '**'),
        field('right', $._expression)
      )),
      // Other operators - left associative
      ...[
        ['%', 'binary_mod'],
        ['+', 'binary_plus'],
        ['-', 'binary_minus'],
        ['*', 'binary_times'],
        ['/', 'binary_div'],
        ['//', 'binary_trunc_div'],
        ['~=', 'binary_regex'],
        ['==', 'binary_relation'],
        ['!=', 'binary_relation'],
        ['>', 'binary_relation'],
        ['>=', 'binary_relation'],
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['??', 'coalesce'],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ),
      ...[
        ['&&', 'clause_connective'],
        ['||', 'clause_disjunctive'],
      ].map(([operator, precedence]) =>
        prec.left(precedence, choice(
          seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          ),
          seq(
            '(',
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
            ')',
          ),
        ),
        ),
      ),
    ),

    _date: _ => seq(
      /\d{4}/,
      '-',
      /\d{1,2}/,
      '-',
      /\d{1,2}/,
    ),
    date: $ => seq(
      '@',
      $._date,
    ),
